Front end content done 1.0
finished layout of main HTML document, ready for CSS and JS

--- a/FrontEndDrills_HTML_CSS_JS_etc/Michelangelo's pizza/PizzaOrdersPage.html
+++ b/FrontEndDrills_HTML_CSS_JS_etc/Michelangelo's pizza/PizzaOrdersPage.html
@@ -16,6 +16,214 @@
       </div>
     </div>
 
+    <!-- Size of pizza? Radios; personal, medium, large, extra large -->
+    <div class="container text-center">
+      <legend>Size of Pizza:</legend>
+      <label>How much pizza can you eat?</label>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Size" id="inlineRadio1" value="Personal"> Personal (6") <span class="badge badge-pill badge-success">$6.00</span>
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Size" id="inlineRadio2" value="Medium" checked> Medium (12") <span class="badge badge-pill badge-success">$10.00</span>
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Size" id="inlineRadio3" value="Large"> Large (16") <span class="badge badge-pill badge-success">$14.00</span>
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Size" id="inlineRadio4" value="extraLarge"> Extra Large (18") <span class="badge badge-pill badge-success">$16.00</span>
+        </label>
+      </div>
+    </div>
+    <!-- /Size of pizza? -->
+
+    <!--  Crust? Radio: Plain Crust, Garlic Butter Crust, Cheese Stuffed Crust, Spicy Crust, and House Special Crust-->
+    <div class="container text-center">
+      <legend>Crust:</legend>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio1" value="Plain" checked> Plain Crust
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio2" value="garlicButter"> Garlic Butter Crust
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio3" value="cheeseStuffed"> Cheese Stuffed Crust <span class="badge badge-success">+$3</span>
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio4" value="Spicy"> Spicy Crust
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio5" value="houseSpecial"> House Special Crust
+        </label>
+      </div>
+    </div>
+    <!-- /Crust -->
+
+    <!-- Sauce? Radio: Marinara sauce, White sauce, Barbeque Sauce, Pesto Sauce and No Sauce -->
+    <div class="container text-center">
+      <legend>Sauce:</legend>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio1" value="Marinara" checked> Marinara Sauce
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio2" value="White"> White Sauce
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio3" value="Barbecue"> Barbecue Sauce
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio4" value="Pesto"> Pesto Sauce
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio5" value="noSauce"> No Sauce
+        </label>
+      </div>
+    </div>
+    <!-- /Sauce -->
+
+    <!-- Vegetables? Check Boxes: Tomatoes, Onions, Olives, Green Peppers, Mushrooms, Pineapple, Spinach, and Jalapeno -->
+    <div class="container text-center">
+      <legend>Vegetables:</legend>
+      <label>First topping <span class="badge badge-success">free!</span></label>
+      <label>Each additional topping <span class="badge badge-success">+$1</span></label>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox1" name="Vegetables" value="Tomatoes" checked> Tomatoes
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox2" name="Vegetables" value="Onions"> Onions
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox3" name="Vegetables" value="Olives"> Olives
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox4" name="Vegetables" value="GreenPeppers"> Green Peppers
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox5" name="Vegetables" value="Mushrooms"> Mushrooms
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox6" name="Vegetables" value="Pineapple"> Pineapple
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox7" name="Vegetables" value="Spinach"> Spinach
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox8" name="Vegetables" value="Jalapeno"> Jalapeno
+        </label>
+      </div>
+    </div>
+    <!-- /Vegetables -->
+
+    <!--Meats? Check Boxes: Pepperoni, Sausage, Canadian Bacon, Groun Beef, Anchovy, and Chicken -->
+    <div class="container text-center">
+      <legend>Meats:</legend>
+      <label>First topping <span class="badge badge-success">free!</span></label>
+      <label>Each additional topping <span class="badge badge-success">+$1</span></label>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox" name="Meat" value="Pepperoni" checked> Pepperoni
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox2" name="Meat" value="Sausage"> Sausage
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox3" name="Meat" value="CanadianBacon"> Canadian Bacon
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox4" name="Meat" value="GroundBeef"> Ground Beef
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox5" name="Meat" value="Anchovy"> Anchovy
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" id="meatCheckbox6" name="Meat" value="Chicken"> Chicken
+        </label>
+      </div>
+    </div>
+    <!--/Meats -->
+
+    <!-- Cheese? Radio: Regular, No Cheese, Extra Cheese -->
+    <div class="container text-center">
+      <legend>Cheese:</legend>
+    </div>
+    <div class="container text-center">
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio1" value="Regular" checked> Regular
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio2" value="noCheese"> No Cheese
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio3" value="extraCheese"> Extra Cheese <span class="badge badge-success">+$3</span>
+        </label>
+      </div>
+    </div>
+    <!-- /Cheese -->
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
