fixed reciept output error
I rewrote the working code from the vegetables section and replaced the meat section with fresh code.

--- a/FrontEndDrills_HTML_CSS_JS_etc/Michelangelo's pizza/PizzaOrdersPage.html
+++ b/FrontEndDrills_HTML_CSS_JS_etc/Michelangelo's pizza/PizzaOrdersPage.html
@@ -40,7 +40,7 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Size" id="inlineRadio4" value="ExtraLarge"> Extra Large (18") <span class="badge badge-pill badge-success">$16.00</span>
+          <input class="form-check-input" type="radio" name="Size" id="inlineRadio4" value="Extra Large"> Extra Large (18") <span class="badge badge-pill badge-success">$16.00</span>
         </label>
       </div>
     </div>
@@ -58,12 +58,12 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio2" value="GarlicButter"> Garlic Butter Crust
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio2" value="Garlic Butter"> Garlic Butter Crust
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio3" value="CheeseStuffed"> Cheese Stuffed Crust <span class="badge badge-success">+$3</span>
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio3" value="Cheese Stuffed"> Cheese Stuffed Crust <span class="badge badge-success">+$3</span>
         </label>
       </div>
       <div class="form-check form-check-inline">
@@ -73,7 +73,7 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio5" value="HouseSpecial"> House Special Crust
+          <input class="form-check-input" type="radio" name="Crust" id="inlineRadio5" value="House Special"> House Special Crust
         </label>
       </div>
     </div>
@@ -106,7 +106,7 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio5" value="NoSauce"> No Sauce
+          <input class="form-check-input" type="radio" name="Sauce" id="inlineRadio5" value="No Sauce"> No Sauce
         </label>
       </div>
     </div>
@@ -136,7 +136,7 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="veggieCheckbox4" name="Vegetables" value="GreenPeppers"> Green Peppers
+          <input class="form-check-input" type="checkbox" id="veggieCheckbox4" name="Vegetables" value="Green Peppers"> Green Peppers
         </label>
       </div>
       <div class="form-check form-check-inline">
@@ -171,32 +171,32 @@
     <div class="container text-center">
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox" name="Meat" value="Pepperoni" checked> Pepperoni
+          <input class="form-check-input" type="checkbox" id="meatCheckbox" name="Carnivore" value="Pepperoni" checked> Pepperoni
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox2" name="Meat" value="Sausage"> Sausage
+          <input class="form-check-input" type="checkbox" id="meatCheckbox2" name="Carnivore" value="Sausage"> Sausage
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox3" name="Meat" value="CanadianBacon"> Canadian Bacon
+          <input class="form-check-input" type="checkbox" id="meatCheckbox3" name="Carnivore" value="Canadian Bacon"> Canadian Bacon
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox4" name="Meat" value="GroundBeef"> Ground Beef
+          <input class="form-check-input" type="checkbox" id="meatCheckbox4" name="Carnivore" value="Ground Beef"> Ground Beef
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox5" name="Meat" value="Anchovy"> Anchovy
+          <input class="form-check-input" type="checkbox" id="meatCheckbox5" name="Carnivore" value="Anchovy"> Anchovy
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" id="meatCheckbox6" name="Meat" value="Chicken"> Chicken
+          <input class="form-check-input" type="checkbox" id="meatCheckbox6" name="Carnivore" value="Chicken"> Chicken
         </label>
       </div>
     </div>
@@ -214,12 +214,12 @@
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio2" value="NoCheese"> No Cheese
+          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio2" value="No Cheese"> No Cheese
         </label>
       </div>
       <div class="form-check form-check-inline">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio3" value="ExtraCheese"> Extra Cheese <span class="badge badge-success">+$3</span>
+          <input class="form-check-input" type="radio" name="Cheese" id="inlineRadio3" value="Extra Cheese"> Extra Cheese <span class="badge badge-success">+$3</span>
         </label>
       </div>
     </div>
